# SPDX-License-Identifier: LGPL-2.1-or-later

fundamental_include = include_directories('.')

#if 0 /// Nowhere used in elogind
#endif // 0
fundamental_sources = files(
        'bootspec-fundamental.c',
        'efivars-fundamental.c',
        'sha256.c',
        'string-util-fundamental.c',
#if 0 /// Nowhere used in elogind
#         'tpm-pcr.c',
#endif // 0
)
