# SPDX-License-Identifier: LGPL-2.1-or-later

fundamental_include = include_directories('.')

fundamental_sources = files(
        'bootspec-fundamental.c',
#if 0 /// Nowhere used in elogind
#         'efivars-fundamental.c',
#endif // 0
        'sha256.c',
        'string-util-fundamental.c',
#if 0 /// Nowhere used in elogind
#         'uki.c',
#endif // 0
)
